--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -1,11 +1,21 @@
-<!-- INíCIO do CONTEÚDO -->
 <section class="content-header">
   <h1>
     Todos os Restaurantes
+    <a (click)="toogleSearch()" class="  search-link pull-right"><i class="fa fa-search"></i></a>
   </h1>
 </section>
 
+<!-- Barra de busca -->
 
+<div class="row">
+  <div class="col-xs-12 search-bar" [@toogleSearch] ="searchBarState">
+    <form>
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="O que você está procurando?"/>
+      </div>
+    </form>
+  </div>
+</div>
 <section class="content">
 
   <div class="row">
@@ -15,5 +25,3 @@
   </div>
 
 </section>
-
-<!-- FIM  do CONTEÚDO -->
