--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
         </ul>
       </div>
       <!-- /.navbar-collapse -->
-
+      <mt-user-detail></mt-user-detail>
     </div>
   </nav>
   </header>
